[package]
name = "bevy-either"
version = "0.2.0"
authors = ["ocornoc <ocornoc@protonmail.com>"]
edition = "2018"
include = ["src/**/*.rs", "LICENSE-*"]
license = "MIT OR Apache-2.0"
description = "A Bevy crate allowing macro-built WorldQueries matching over one of many other WorldQueries."
repository = "https://github.com/ocornoc/bevy_either"

[dependencies]
bevy = {version = "0.5", default-features = false}
paste = "1.0.5"
